--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - npm run build
 
 after_success:
- — firebase use react-test-4feb1
+  - firebase use react-test-4feb1
 
 deploy:
   provider: firebase
