--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,8 @@ script:
   - npm test
   - npm run build
 
-after_success:
-  - firebase use react-test-4feb1
-
 deploy:
   provider: firebase
   token:
     secure: "encrypted_firebase_CI_token"
+  project: "react-test-4feb1"
